# hybrid-quantum-risk-minimisation

./: CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: paper_qbraid_ionq.yaml  paper_qpu_ibm.yaml  paper_qru_72params.yaml  paper_small7_k2_sim.yaml
docs/: reproducibility.md
experiments/: analyze_qaoa_runs.py  bruteforce_optimum.py  build_c_matrix.py  end_to_end_sim_demo.py  qaoa_mixer_only_leakage_qbraid.py  qru_qpu_ibm_batch.py  qru_qpu_ibm_predict.py  qru_train.py  run_qaoa_inference.py  run_qaoa_inference_qbraid_ionq.py
experiments/make_figures/: fig_mixer_hist.py  fig_optimum_vs_qaoa.py
risk_pipeline/: __init__.py  dataset.py  qaoa.py  qru_jax.py  qubo.py  risk.py  scaling.py
tests/: test_qubo.py  test_scaling.py
