[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-pipeline"
version = "0.1.0"
description = "QRU-QAOA spatial flood tail-risk pipeline (artifact-ready)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Léa Cassé"}]
license = {text = "MIT"}

dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
]

[project.optional-dependencies]
quantum = ["pennylane>=0.36", "jax>=0.4.28", "jaxlib>=0.4.28", "optax>=0.2.2"]
dev = ["pytest>=8.0", "matplotlib>=3.8"]

[tool.setuptools]
packages = ["risk_pipeline"]
